@@ -1,5 +1,6 @@
 v6.4
 -----
++ Rewrote regional price comparision to increase speed and pull data from our own API server
 
 
 v6.3.3
